--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
@@ -22,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
