--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
+    "firebase-tools": "^13.11.4",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
